[feat] 페이징 기능에 따른 테스트 수정